# homogeneous-segmentation

./: .gitignore  make_100m_segments.py  pyproject.toml  readme.md  setup.cfg
old_r_script/: tests_of_HS.ipynb  tests_of_old_r_code.ipynb
src/HS/: __init__.py  homogeneous_segmentation.py  readme.md
src/HS/util/: cda.py  mcv.py  preprocessing.py  segbycategory.py  segment_by_category_and_slk_breaks.py  shs.py  shs_fixed.py  splitlong.py
src/homogeneous_segmentation/: __init__.py  _cumulative_p.py  _cumulative_q.py  _mvc.py  _optimal_bisections.py  _seg_mcv.py  _seg_shs.py  _shs.py
test/: test_cumq.py  test_readme_example.py  test_segbycat_and_slk.py  test_segbycat_and_slk_and_true.py  test_segbycategory.py  test_shs.py
test/r_outputs/: df2_seg_test_out.csv
test/r_version/: generate_test_outputs.ipynb  stepping through r version.ipynb
test/test_data/: df2.csv  generate_df2.ipynb
tests/: 01_setup_tests_generate_r_outputs.ipynb  manual_tests_stepping through r version.ipynb  test_cumq.py  test_optimal_bisections.py  test_p_cumulative.py  test_q_cumulative.py  test_readme_example.py  test_segment_mvc.py  test_segment_shs.py  test_shs.py
tests/r_outputs/: df1_seg_test_out.csv  df2_mcv_test_out.csv  df2_seg_test_out.csv
