[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homogeneous-segmentation"
version = "2.1.0"
authors = [
    { name = "Yongze Song", role="author of original R package named HS" },
    { name = "Nicholas Archer", role = "port to python / maintainer" }
]
license = "GPL-2.0-only"
description = "Methods for homogenous segmentation of linear spatial data, such as pavement performance indicators and traffic volumes. Two of the three original methods have been ported; the spatial heterogeneity based segmentation, and the Minimise Coefficient of Variation segmentation. The original R package also implmented the cumulative difference approach and a number of associated functions not ported to thise package."
readme = "readme.md"

dependencies = [
    "pandas"
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/thehappycheese/homogeneous-segmentation"
"Original R Package" = "https://cran.r-project.org/web/packages/HS/index.html"

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = [
  "tests"
]

[tool.pylint]
max-line-length = 120
