[metadata]
name = HS
version = 1.1.4
author = Yongze Song
licence = GPL-2
maintainer = Nicholas Archer
description = Original R package Author: Yongze Song. Ported / Maintained by Nicholas Archer. Methods of homogenous segmentation for spatial lines data, such as pavement performance indicators and traffic volumes. Three methods are available for homogenous segmentation, including cumulative difference approach, minimization coefficient of variation, and spatial heterogeneity based method.
long_description=file:readme.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/thehappycheese/HS
project_urls = 
    R_package = https://cran.r-project.org/web/packages/HS/index.html

[options]
packages = find:
package_dir = 
    = src
install_requires =
    pandas
    deprecated
python_requires=>=3.9

[options.extras_require]
dev=
    pytest

[options.packages.find]
where = src